Implementacion de Firebase e incorporacion de clases

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RZ-app</string>
+    <string name="default_web_client_id" translatable="false">212888583535-232udlc2a0ips7uq7v7e5mbpjro6dd7v.apps.googleusercontent.com</string>
 </resources>
